# python-project-50

./: .codeclimate.yml  .coverage  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: README.md  my-checks.yml  my-cheks.yml
gendiff/: __init__.py  format_module.py  gendiff_module.py
gendiff/diff_pkg/: gendiff_module.py
gendiff/format_pkg/: constans.py  json_format.py  plain_format.py  stylish_format.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: test_flat_json.py  test_flat_yml.py  test_formatters.py  test_json.py  test_plain.py  test_read_repr.py  test_stylish.py
tests/fixtures/: analyzes_node.txt  diff_json.txt  file_one.yml  file_two.yaml  flat_jaml.txt  internal_representacion.py  test_get_tree.txt
