[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = ["Ruslan Latypov <stihyra@mail.ru>"]
readme = "README.md"
packages = [{include = "gen_diff"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
prompt = "^0.4.1"
flake8 = "^6.0.0"
black = "^23.1.0"

[tool.poetry.scripts]
gendiff = "gen_diff.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
